edge/log/build_2026-04-15_23-11-29/bishe_detector/stdout_stderr.log
[ 14%] Built target gtest
[ 28%] Built target gtest_main
[ 71%] Built target bishe_detector_component
Consolidate compiler generated dependencies of target test_detection_gate
[ 78%] Building CXX object CMakeFiles/test_detection_gate.dir/test/test_detection_gate.cpp.o
[ 92%] Built target detector_node
/home/jetson/projects/bishe/edge/src/bishe_detector/test/test_detection_gate.cpp: In member function ‘virtual void DetectorResultUtilsTest_BuildsOwnedPassThroughResultByMovingOwnedFrame_Test::TestBody()’:
/home/jetson/projects/bishe/edge/src/bishe_detector/test/test_detection_gate.cpp:138:23: error: ‘buildOwnedPassThroughResult’ was not declared in this scope; did you mean ‘buildPassThroughResult’?
  138 |   const auto result = buildOwnedPassThroughResult(std::move(image), 0.25f);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                       buildPassThroughResult
gmake[2]: *** [CMakeFiles/test_detection_gate.dir/build.make:76：CMakeFiles/test_detection_gate.dir/test/test_detection_gate.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:212：CMakeFiles/test_detection_gate.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
